# NaturalLanguageProcessing

./: .gitignore  PROJECT_NOTES.md  README.md  main.tex  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: books.yaml  train_100m.yaml  train_100m_transformer.yaml  train_10m.yaml  train_10m_transformer.yaml  train_50m.yaml  train_large.yaml  train_large_transformer.yaml  train_medium.yaml  train_medium_transformer.yaml  train_tiny.yaml  train_tiny_transformer.yaml  transformer_100m.yaml  transformer_10m.yaml  transformer_large.yaml  transformer_medium.yaml  transformer_medium_legacy.yaml  transformer_tiny.yaml  xlstm_100m.yaml  xlstm_10m.yaml  xlstm_50m.yaml  xlstm_large.yaml  xlstm_medium.yaml  xlstm_medium_legacy.yaml  xlstm_tiny.yaml
scripts/: chat.py  check_tex.py  clean_log.py  compare_runs.py  count_params.py  generate.py  make_paper_figures.py  prepare_books.py  prepare_eval_set.py  probe_classify.py  probe_olist_reviews.py  probe_sentiment.py  run_desktop.sh  run_imdb_compare.sh  run_parallel.sh  run_slurm.sbatch  run_slurm_ddp.sbatch  run_slurm_parallel.sbatch  run_transformers.ps1  run_transformers.sh  sample_for_tokenizer.py  test_pipeline.py  train.py  train_local.py  train_local_ddp.py  train_tokenizer.py  translate_imdb.py
src/: model.py  model_factory.py  training.py  transformer.py
src/data/: __init__.py  eval_dataset.py  multi_file_dataset.py  streaming.py  tokenizer.py
